# ingimp

./: Makefile.am  Makefile.in  README  configure  configure.in
app/: Makefile.am  Makefile.in  app.c
app/actions/: file-commands.c  image-commands.c  plug-in-commands.c
app/core/: Makefile.am  Makefile.in  gimp.c  gimpimage.c  gimpinteraction-logger.c  gimpinteraction-logger.h  gimptemplate.c
app/display/: gimpdisplayshell.c
app/file/: file-open.c  file-save.c
app/plug-in/: gimpplugin.c
app/widgets/: gimpdialogfactory.c  gimpmenufactory.c
autom4te.cache/: output.0  requests  traces.0
guilog/: CREDITS  ChangeLog.ingimp  Makefile.am  Makefile.in  README  makedist
guilog/compiling/: win_enviro_setup.sh
guilog/consent/: Makefile.am  Makefile.in  consent.txt
guilog/wininstall/: ingimp_install.iss
guilog/wrapper/: About.py  Config.py  Config.py.bak  ConsentDialog.py.in  FirstTimeHandler.py  FlatFilerMaker.py  Launcher.py  MacLib.py  MacX11Screen.py  Main.py  Makefile.am  Makefile.in  Participation.py  Pictoviewer.py  SplashScreen.py  TODO  UploadDialog.py.in  Uploader.py  UserPrefs.py  UserPrefsEditor.py  Utils.py  WindowsSetup.py  ingimp-helper.py  ingimp.in
guilog/wrapper/images/: Makefile.am  Makefile.in
plug-ins/: Makefile.am  Makefile.in
plug-ins/common/: wmf.c
plug-ins/uri/: Makefile.am  Makefile.in  uri-backend-ingimp.c
