## Makefile.am for gimp/guilog/wrapper/images

imagedir = $(datadir)/ingimp

image_DATA = \
	ingimp_logo.gif \
	ingimp_info_logo.gif \
	webstats_button.gif \
	launch_button.gif \
	divider_line.gif \
	pictogram-0.gif \
	pictogram-1.gif \
	pictogram-2.gif \
	pictogram-3.gif \
	pictogram-4.gif

EXTRA_DIST = $(image_DATA)
